# ferrisbot-for-discord

./: .gitignore  Cargo.toml  Dockerfile
src/: checks.rs  commands.rs  helpers.rs  main.rs  types.rs
src/commands/: crates.rs  godbolt.rs  man.rs  thread_pin.rs  utilities.rs
src/commands/crates/: tests.rs
src/commands/godbolt/: targets.rs
src/commands/playground/: api.rs  microbench.rs  misc_commands.rs  play_eval.rs  procmacro.rs  util.rs
