[package]
name = "ferrisbot-for-discord"
version = "0.1.0"
authors = [
    "kangalioo",
    "technetos <mrgould93@gmail.com>",
    "Ivan Dardi <ivanbdardi@gmail.com>",
]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = { version = "0.2", default-features = false }                                    # interact with imageproc
anyhow = "1.0"
futures = "0.3.31"
image = { version = "0.25", default-features = false, features = ["png"] }                  # get a better computer meme rendering
imageproc = { version = "0.25", default-features = false }                                  # get a better computer meme rendering
implicit-fn = "0.1.0"
itertools = "0.14"
poise = "0.6"
proc-macro2 = { version = "1.0.94", features = ["span-locations"] }
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0.100", features = ["full"] }
tokio = { version = "1.44", features = ["macros", "net", "rt"] }
toml = "0.8.23"
tracing = "0.1.41"
